# Templates

./: README.md
stmf4xx-embassy/: Cargo.toml
stmf4xx-embassy/.cargo/: config.toml
stmf4xx-embassy/src/: main.rs
stmf4xx-std-hal/: Cargo.toml  Embed.toml  memory.x
stmf4xx-std-hal/.cargo/: config.toml
stmf4xx-std-hal/src/: interrupts.rs  main.rs
stmg0b1-embassy/: Cargo.toml  Embed.toml
stmg0b1-embassy/src/: main.rs
stmg0b1-rtic/: Cargo.toml  flake.nix  memory.x
stmg0b1-rtic/src/: main.rs
stmh7xx-embassy/: Cargo.toml  Embed.toml
stmh7xx-embassy/.cargo/: config.toml
stmh7xx-embassy/src/: main.rs
