[package]
name = "stm_std_hal"
version = "0.1.0"
edition = "2024"

[dependencies]
stm32f4xx-hal = { version = "0.22.1", features = ["stm32f413", "defmt"] }
defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "1.0.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
